--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
   <body>
     <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button class="submit-btn" type="submit">Search</button>
+      <button class="submit-btn btn" type="submit">Search</button>
     </form>
     <div class="gallery"></div>
-
+    <button class="load-more-btn btn is-hidden" type="button">Load more</button>
     <script src="index.js"></script>
   </body>
 </html>
